fixed spacing and styling

--- a/src/index.css
+++ b/src/index.css
@@ -48,13 +48,6 @@
     margin-bottom: -90px;
   }
 
-  /* #home_p-bottom {
-
-    text-align: center;
-    margin-left: 5px;
-    margin-right: 5px;
-    font-size: 14px;
-  } */
 
 
   #nav_brand {
@@ -85,13 +78,19 @@ padding-top: 100px;
   #home_p {
     display: inline-block; 
     text-align: left; 
-    padding-left: 35px;
+    padding-left: 30px;
+    padding-right: 15px;
   }
 
   #home_p-chat {
     font-size: 16px;
     text-align: left;
     padding-left: 35px;
+  }
+
+  #consult_btn {
+    text-align: center;
+    align-items: center;
   }
 
   /* #home_p {
@@ -141,16 +140,18 @@ padding-top: 100px;
 #contact-p {
  
   margin-bottom: -10px;
-  float: left;
-  padding-bottom: 5px;
-  margin-left: 20px;
-  font-size: 12px;
+
+  font-size: 14px;
 }
 
 #contact-top {
   margin-bottom: -25px;
   margin-top: -25px;
-  margin-left: 10px;
+
+}
+
+#contact-container {
+  width: 100%;
 }
 
   .solution-list {
@@ -165,13 +166,13 @@ padding-top: 100px;
 }
 
 #contact-mid {
-  display: inline-flex;
-  padding-left: 50px;
+
+  padding-left: 1px;
 }
 
 #contact-h3 {
   padding-bottom: 20px;
-  padding-left: 25px;
+  padding-left: 0px;
 }
 
 
@@ -285,22 +286,26 @@ transition: all 0.5s cubic-bezier(0,1,0,1);
   text-align: right;
 }
 
-#contact-top {
+ /* #contact-top {
 
 display: inline-flex;
-justify-content: flex-end;
-}
+
+} */
+
 
 #contact-mid {
   display: inline-flex;
 
-/* justify-content: flex-end; */
-}
+
+justify-content: flex-end;
+} 
 
 @media only screen and (max-width: 900px) {
-  #contact-top {
-padding-left: 20px;
+  #contact-container,#contact-mid, #contact-top {
+    padding-left: 30px;
+    padding-right: 15px;
   }
+
 
   }
 
@@ -321,9 +326,12 @@ padding-left: 20px;
     text-align: center;
   }
 
-  .solution-list {
 
-    text-align: left;
+
+  .solution-list {
+    display: inline-block;
+    text-align:  right;
+    padding-right: 10px;
     padding-left: 50px;
   }
 
